fix errs, update naming again, first release of v 2.0.1